--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-
+        <p>
+            THIS IS A CALCULATOR 
+        </p>
+        <p>
+            THIS IS tutorial
+        </p>
     </body>
 </html>
